# dockmon

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/dockmon/: __init__.py  collector.py  main.py  renderer.py  tui.py  utils.py
tests/: __init__.py  test_dockmon.py
