[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dockmon"
version = "0.1.0"
description = "DockMon is a lightweight, terminal-based Docker container monitor that provides real-time insights into container metrics and logs - an alternative to Docker Desktop's graphical interface."
readme = "README.rst"
authors = [
  {name = "Viacheslav Nikulin", email = "viacheslav.nikulin@gmail.com"}
]
maintainers = [
  {name = "Viacheslav Nikulin", email = "viacheslav.nikulin@gmail.com"}
]
classifiers = []
license = {text = "MIT license"}
dependencies = [
  "prompt_toolkit"
]

[project.scripts]
dockmon = "dockmon.main:main"

[project.optional-dependencies]
dev = [
    "coverage",
    "mypy",
    "pytest",
    "ruff"
]

[project.urls]

bugs = "https://github.com/slava-nikulin/dockmon/issues"
changelog = "https://github.com/slava-nikulin/dockmon/blob/master/changelog.md"
homepage = "https://github.com/slava-nikulin/dockmon"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

